# analytics_journey

./: README.md
00_Load_to_storage/: pyproject.toml  tqdm_output.txt  upload_files.py
00_Load_to_storage/data/ERP/: deals_profiles.csv
01_Load_to_Bigquery/: .gitignore  create_dataset.py  load_from_hubspot.py  load_from_storage.py  pyproject.toml  references.txt
02_Churn_Prediction/: pyproject.toml
02_Churn_Prediction/src/: engine.py
02_Churn_Prediction/src/etl/: pagamentos.sql
