[tool.poetry]
name = "00-load-to-storage"
version = "0.1.0"
description = "Load csv data to parquet in Google Cloud Storage"
authors = ["matheusmafraoandrade <matheusmafrabh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyarrow = "^16.1.0"
pandas = "^2.2.2"
google-cloud-storage = "^2.17.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
